CKA-CKS-CKAD/netpol/netpolicy/network-policy/network-policy-namespace.yaml
# create a new namespace
kind: Namespace
apiVersion: v1
metadata:
  name: newapp
  labels:
    team: green

---

# This network policy places restrictions on which pods can communicate to the
# hello-server service. Network policies can be thought of as in-cluster firewall
# rules, where the source and destination are specified as selectors. In this case
# we use labels as the selection criteria for namespaces.
# See https://kubernetes.io/docs/concepts/services-networking/network-policies/
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  # Name the network policy
  name: hello-server-allow-from-hello-client-via-namespace
spec:

  # Define this as an ingress rule which allows us to restrict access to a set of pods.
  policyTypes:
  - Ingress

  # Defines the set of pods to which this policy applies
  # In this case, we apply the policy to pods labeled as app=hello-server
  podSelector:
    matchLabels:
      app: hello-server

  # Define the sources allowed by this policy
  # In this case, we allow ingress from all pods the namespace labeled as team=hello
  # Note: as of Kubernetes 1.10. It is not possible to restrict connections
  # by both namespace and pod labels simultaneously. However support is
  # expected to be added in the future.
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: green
